<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@id/cl"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shapes_calc"
    android:layout_margin="10dp">

  <Spinner
      android:id="@+id/spinner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:entries="@array/shapes"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/spinner"
      android:layout_marginTop="50dp"
      tools:layout_editor_absoluteX="1dp">

    <EditText
        android:id="@+id/rect_et_height"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/rect_et_height"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/rect_et_width"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/rect_et_width"
        android:textSize="25sp" />


  </LinearLayout>

  <EditText
      android:id="@+id/circle_et_radius"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_weight="1"
      android:hint="@string/circle_et_radius"
      android:textSize="25sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/spinner" />

  <LinearLayout

      android:id="@+id/linearLayout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/spinner"
      android:layout_marginTop="50dp"

      tools:layout_editor_absoluteX="1dp">

    <EditText
        android:id="@+id/tri_et_height"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/tri_et_height"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/tri_et_base"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/tri_et_base"
        android:textSize="25sp" />


  </LinearLayout>

  <TextView
      android:id="@+id/textView4"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="200dp"
      android:text=""
      android:textColor="@color/black"
      android:textSize="50dp"
      android:gravity="center"
      android:background="@color/teal_700"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/spinner" />

  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cal_btn"
      android:layout_marginTop="120dp"
      android:textSize="25sp"
      app:layout_constraintTop_toBottomOf="@id/spinner"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout_editor_absoluteY="143dp" />
</androidx.constraintlayout.widget.ConstraintLayout>